[gd_scene load_steps=4 format=3 uid="uid://ekylft5i8b0n"]

[ext_resource type="Texture2D" uid="uid://cee0bguygs4mv" path="res://Assets/sprites/reload-gun-barrel.svg" id="1_rpfia"]
[ext_resource type="Script" uid="uid://daew4v7lykc4s" path="res://reload_cool_display.gd" id="2_lmjgk"]
[ext_resource type="FontFile" uid="uid://vvm7gysc4018" path="res://Assets/sprites/PixelOperator.ttf" id="2_rpfia"]

[node name="reload_cool_display" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_rpfia")
script = ExtResource("2_lmjgk")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="sweep" type="TextureProgressBar" parent="."]
modulate = Color(0.2520276, 0.25202766, 0.25202763, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5

[node name="value" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_rpfia")
theme_override_font_sizes/font_size = 300
text = "0.0"
horizontal_alignment = 2
vertical_alignment = 2
clip_text = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
